# Hoopoe-Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  builder-resources.list  builder.config  builder.sh  include.cmake
Engine/: CMakeLists.txt  Hoopoe.h
Engine/Core/include/: Application.h  ConfigFile.h  ConfigOption.h  CoreHeaders.h  CorePrerequisites.h  DataStream.h  Database.h  Exception.h  FileSystem.h  LogManager.h  Memory.h  Platform.h  ResourceManager.h  SharedPtr.h  StringUtil.h  Timer.h  Types.h
Engine/Core/include/platform/linux/: FileSystem.h
Engine/Core/include/platform/win/: FileSystem.h
Engine/Core/resources/: hoopoe.cfg
Engine/Core/src/: Application.cpp  ConfigFile.cpp  Core.h  DataStream.cpp  Database.cpp  Entry.h  Exception.cpp  FileSystem.cpp  LogManager.cpp  StringUtil.cpp
Engine/Core/src/platform/linux/: FileSystemImpl.cpp
Engine/Core/src/platform/mac/: FileSystemImpl.cpp
Engine/Core/src/platform/win/: FileSystemImpl.cpp
Engine/Core/test/: CMakeLists.txt
Engine/Core/test/include/: TestConfigFile.h  TestFileSystem.h
Engine/Core/test/resources/: TestConfigFile.cfg  TestResourceManager.txt
Engine/Core/test/src/: TestConfigFile.cpp  TestFileSystem.cpp  TestResourceManager.cpp  test.cpp
Engine/Renderer/include/: Graphics.h
Engine/Renderer/src/: Graphics.cpp
Engine/UTest/: CMakeLists.txt
Engine/UTest/include/: TestBase.h  TestReporter.h  TestSuite.h
Engine/UTest/src/: TestReporter.cpp  TestSuite.cpp  UTest.cpp
Engine/UTest/test/: CMakeLists.txt
Engine/UTest/test/src/: TestUTest.cpp  test.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
Sandbox/Game/: GameHeaders.h
Sandbox/Game/include/: Creature.h  Dialogues.h  DialoguesTool.h  Location.h  Player.h  time.h
Sandbox/Game/src/: Creature.cpp  Dialogues.cpp  DialoguesTool.cpp  Location.cpp  Player.cpp  time.cpp
utests/: TestCore  TestUTest
